Add scroll on click on menu

--- a/src/index.html
+++ b/src/index.html
@@ -21,25 +21,25 @@
         <nav class="header__nav">
             <ul>
                 <li>
-                    <a class="header__nav-link" href="#">Про нас</a>
+                    <a class="header__nav-link" href="#about">Про нас</a>
                 </li>
                 <li>
-                    <a class="header__nav-link" href="#">Долучитися</a>
+                    <a class="header__nav-link" href="#join">Долучитися</a>
                 </li>
                 <li>
-                    <a class="header__nav-link" href="#">Мапа</a>
+                    <a class="header__nav-link" href="#map">Мапа</a>
                 </li>
                 <li>
-                    <a class="header__nav-link" href="#">Статистика</a>
+                    <a class="header__nav-link" href="#statistic">Статистика</a>
                 </li>
                 <li>
-                    <a class="header__nav-link" href="#">Пояснення</a>
+                    <a class="header__nav-link" href="#explain">Пояснення</a>
                 </li>
                 <li>
-                    <a class="header__nav-link" href="#">Документи</a>
+                    <a class="header__nav-link" href="#documents">Документи</a>
                 </li>
                 <li>
-                    <a class="header__nav-link" href="#">Контакти</a>
+                    <a class="header__nav-link" href="#contacts">Контакти</a>
                 </li>
             </ul>
         </nav>
@@ -56,7 +56,7 @@
     </footer>
 </header>
 <main class="main">
-    <section class="about">
+    <section class="about" id="about">
         <header class="about__header">
             <h3>про нас</h3>
         </header>
@@ -72,7 +72,7 @@
             </a>
         </article>
     </section>
-    <section class="join">
+    <section class="join" id="join">
         <header class="join__header">
             <h3>долучитися</h3>
         </header>
@@ -118,7 +118,7 @@
             </div>
         </article>
     </section>
-    <section class="map">
+    <section class="map" id="map">
         <header class="map__header">
             <h3>мапа проекту</h3>
         </header>
@@ -139,7 +139,7 @@
             </div>
         </article>
     </section>
-    <section class="statistic">
+    <section class="statistic" id="statistic">
         <header class="statistic__header">
             <h3>статистика</h3>
         </header>
@@ -278,7 +278,7 @@
             </section>
         </article>
     </section>
-    <section class="explain">
+    <section class="explain" id="explain">
         <header class="explain__header">
             <h3>ПОЯСНЕННЯ</h3>
         </header>
@@ -418,11 +418,155 @@
                             </li>
                         </ul>
                     </section>
+                    <section class="tabs__slide">
+                        <ul class="explain__list">
+                            <li class="explain__item">
+                                <h4>Як отримати ЕЦП юридичної особи</h4>
+                                <time>20.05.2017</time>
+                                Декілька слів про те, як
+                                отримати ЕЦП якщо
+                                раптом виявилося, що
+                                ви юридична особа...
+                            </li>
+                            <li class="explain__item">
+                                <h4>Доступ до даних пацієнта</h4>
+                                <time>20.05.2017</time>
+                                Як отримати дані
+                                пацієнта? Чи є життя
+                                після читання Ніцше?
+                                Що робити якщо?
+                            </li>
+                            <li class="explain__item">
+                                <h4>Пояснення з дуже дуже-дуже довгою назвою з декількох незрозумілих слів</h4>
+                                <time>20.05.2017</time>
+                                Тут така довга назва, що
+                                навіть підзаголовку
+                                не треба
+                            </li>
+                            <li class="explain__item">
+                                <h4>Привілеї лікарям Бонуси аптекам</h4>
+                                <time>20.05.2017</time>
+                                Яких бонусів вам ще треба?
+                                Що це за забаганки?
+                                Вам шо мало того, шо
+                                вже є? Нє ну ви бачили
+                                таке?! Поїзд їде воно лізе
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="tabs__slide">
+                        <ul class="explain__list">
+                            <li class="explain__item">
+                                <h4>Як отримати ЕЦП юридичної особи</h4>
+                                <time>20.05.2017</time>
+                                Декілька слів про те, як
+                                отримати ЕЦП якщо
+                                раптом виявилося, що
+                                ви юридична особа...
+                            </li>
+                            <li class="explain__item">
+                                <h4>Доступ до даних пацієнта</h4>
+                                <time>20.05.2017</time>
+                                Як отримати дані
+                                пацієнта? Чи є життя
+                                після читання Ніцше?
+                                Що робити якщо?
+                            </li>
+                            <li class="explain__item">
+                                <h4>Пояснення з дуже дуже-дуже довгою назвою з декількох незрозумілих слів</h4>
+                                <time>20.05.2017</time>
+                                Тут така довга назва, що
+                                навіть підзаголовку
+                                не треба
+                            </li>
+                            <li class="explain__item">
+                                <h4>Привілеї лікарям Бонуси аптекам</h4>
+                                <time>20.05.2017</time>
+                                Яких бонусів вам ще треба?
+                                Що це за забаганки?
+                                Вам шо мало того, шо
+                                вже є? Нє ну ви бачили
+                                таке?! Поїзд їде воно лізе
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="tabs__slide">
+                        <ul class="explain__list">
+                            <li class="explain__item">
+                                <h4>Як отримати ЕЦП юридичної особи</h4>
+                                <time>20.05.2017</time>
+                                Декілька слів про те, як
+                                отримати ЕЦП якщо
+                                раптом виявилося, що
+                                ви юридична особа...
+                            </li>
+                            <li class="explain__item">
+                                <h4>Доступ до даних пацієнта</h4>
+                                <time>20.05.2017</time>
+                                Як отримати дані
+                                пацієнта? Чи є життя
+                                після читання Ніцше?
+                                Що робити якщо?
+                            </li>
+                            <li class="explain__item">
+                                <h4>Пояснення з дуже дуже-дуже довгою назвою з декількох незрозумілих слів</h4>
+                                <time>20.05.2017</time>
+                                Тут така довга назва, що
+                                навіть підзаголовку
+                                не треба
+                            </li>
+                            <li class="explain__item">
+                                <h4>Привілеї лікарям Бонуси аптекам</h4>
+                                <time>20.05.2017</time>
+                                Яких бонусів вам ще треба?
+                                Що це за забаганки?
+                                Вам шо мало того, шо
+                                вже є? Нє ну ви бачили
+                                таке?! Поїзд їде воно лізе
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="tabs__slide">
+                        <ul class="explain__list">
+                            <li class="explain__item">
+                                <h4>Як отримати ЕЦП юридичної особи</h4>
+                                <time>20.05.2017</time>
+                                Декілька слів про те, як
+                                отримати ЕЦП якщо
+                                раптом виявилося, що
+                                ви юридична особа...
+                            </li>
+                            <li class="explain__item">
+                                <h4>Доступ до даних пацієнта</h4>
+                                <time>20.05.2017</time>
+                                Як отримати дані
+                                пацієнта? Чи є життя
+                                після читання Ніцше?
+                                Що робити якщо?
+                            </li>
+                            <li class="explain__item">
+                                <h4>Пояснення з дуже дуже-дуже довгою назвою з декількох незрозумілих слів</h4>
+                                <time>20.05.2017</time>
+                                Тут така довга назва, що
+                                навіть підзаголовку
+                                не треба
+                            </li>
+                            <li class="explain__item">
+                                <h4>Привілеї лікарям Бонуси аптекам</h4>
+                                <time>20.05.2017</time>
+                                Яких бонусів вам ще треба?
+                                Що це за забаганки?
+                                Вам шо мало того, шо
+                                вже є? Нє ну ви бачили
+                                таке?! Поїзд їде воно лізе
+                            </li>
+                        </ul>
+                    </section>
                 </article>
             </section>
         </article>
     </section>
-    <section class="docs">
+    <section class="docs" id="documents">
         <header class="docs__header">
             <h3>документи</h3>
         </header>
@@ -670,7 +814,7 @@
             </section>
         </article>
     </section>
-    <section class="contacts">
+    <section class="contacts" id="contacts">
         <header class="contacts__header">
             <h3>КОНТАКТИ</h3>
         </header>
