Add map and doc pages, add readme

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
     <link rel="shortcut icon" href="favicon.ico?v=1" type="image/x-icon">
 
-    <link rel="stylesheet" type="text/css" href="app.css">
+    <link rel="stylesheet" type="text/css" href="main.min.css">
 </head>
 <body>
 
@@ -18,28 +18,28 @@
                 <img src="images/logo.png" alt="NHS Logo">
             </a>
         </div>
-        <nav class="header__nav">
+        <nav class="nav">
             <ul>
                 <li>
-                    <a class="header__nav-link" href="#about">Про нас</a>
+                    <a class="nav__link" href="#about">Про нас</a>
                 </li>
                 <li>
-                    <a class="header__nav-link" href="#join">Долучитися</a>
+                    <a class="nav__link" href="#join">Долучитися</a>
                 </li>
                 <li>
-                    <a class="header__nav-link" href="#map">Мапа</a>
+                    <a class="nav__link" href="#map">Мапа</a>
                 </li>
                 <li>
-                    <a class="header__nav-link" href="#statistic">Статистика</a>
+                    <a class="nav__link" href="#statistic">Статистика</a>
                 </li>
                 <li>
-                    <a class="header__nav-link" href="#explain">Пояснення</a>
+                    <a class="nav__link" href="#explain">Пояснення</a>
                 </li>
                 <li>
-                    <a class="header__nav-link" href="#documents">Документи</a>
+                    <a class="nav__link" href="#documents">Документи</a>
                 </li>
                 <li>
-                    <a class="header__nav-link" href="#contacts">Контакти</a>
+                    <a class="nav__link" href="#contacts">Контакти</a>
                 </li>
             </ul>
         </nav>
