Add link to map, change map tooltip animation

--- a/src/index.html
+++ b/src/index.html
@@ -136,6 +136,9 @@
                     <dt>32987</dt>
                     <dd>декларацій підписано</dd>
                 </dl>
+                <a href="map.html" class="map__tooltip-link">
+                    Детальніше <i class="icon icon_name_arrow-right"></i>
+                </a>
             </div>
         </article>
     </section>
